# sdk-zephyr

./: .clang-format  .sonarcloud.properties  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.rst  Jenkinsfile  Kconfig.zephyr  MAINTAINERS.yml  README.rst  ncs-2.6.4-branch-cherry-picks.txt  sonar-project.properties  test  west.yml  zephyr-env.cmd  zephyr-env.sh
.github/: test-spec.yml  test-spec.yml 
arch/: CMakeLists.txt  Kconfig
boards/: deprecated.cmake
cmake/: dts.cmake  extensions.cmake  host-tools.cmake  kconfig.cmake  mcuboot.cmake  partition_manager.cmake  target_toolchain.cmake  zephyr_module.cmake
doc/: CMakeLists.txt  Makefile  conf.py  glossary.rst  known-warnings.txt  requirements.in  requirements.txt  zephyr.doxyfile.in
drivers/: CMakeLists.txt  Kconfig
dts/: Kconfig
samples/application_development/code_relocation_nocopy/: CMakeLists.txt  KMU_SRAM2_SOLUTION.md  SOLUTION_SUMMARY.md  linker_arm_nocopy.ld
samples/application_development/code_relocation_nocopy/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
samples/application_development/code_relocation_nocopy/src/: main.c
samples/boards/nrf/sleepy_advertiser/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/boards/nrf/sleepy_advertiser/boards/: bl5340pa_dvk_cpuapp.overlay  fem.conf  mock_lcz_fem.overlay  nrf21540dk_nrf52840.overlay
samples/boards/nrf/sleepy_advertiser/child_image/: disable_uart.overlay  mock_lcz_fem.nrf21540_ek.overlay  no_log.conf  rtt_log.conf  uart_log.conf
samples/boards/nrf/sleepy_advertiser/src/: main.c
samples/subsys/mgmt/mcumgr/smp_svr/: CMakeLists.txt  README.rst  overlay-bt.conf  overlay-cdc.conf  overlay-serial.conf  overlay-shell.conf  prj.conf  sample.yaml
samples/subsys/mgmt/mcumgr/smp_svr/boards/: nrf54h20dk_nrf54h20_cpuapp_iron.overlay  nrf54h20dk_nrf54h20_cpuapp_iron_ext_flash.overlay
samples/subsys/mgmt/mcumgr/smp_svr/child_image/: mcuboot.conf
samples/subsys/mgmt/mcumgr/smp_svr/configuration/nrf5340dk_nrf5340_cpuapp/: app.overlay  pm_static.yml  prj.conf
samples/subsys/mgmt/mcumgr/smp_svr/configuration/nrf5340dk_nrf5340_cpuapp/child_image/hci_rpmsg/: prj.conf
samples/subsys/mgmt/mcumgr/smp_svr/configuration/nrf5340dk_nrf5340_cpuapp/child_image/mcuboot/: prj.conf
samples/subsys/mgmt/mcumgr/smp_svr/src/: bluetooth.c  main.c
samples/subsys/mgmt/mcumgr/smp_svr/sysbuild/: mcuboot.conf  mcuboot.overlay  mcuboot_nrf5340_bt.conf
samples/subsys/trusted_storage/psa_internal_trusted_storage/settings_psa_its_chachapoly/: CMakeLists.txt  prj.conf
samples/subsys/trusted_storage/psa_internal_trusted_storage/settings_psa_its_chachapoly/src/: settings_setup_littlefs.c
samples/subsys/trusted_storage/psa_protected_storage/settings_psa_ps_auth_crypt/: CMakeLists.txt  prj.conf
samples/subsys/trusted_storage/psa_protected_storage/settings_psa_ps_auth_crypt/boards/: nrf52840dk_nrf52840.conf
soc/nordic/common/uicr/gen_uicr/: CMakeLists.txt  Kconfig
soc/nordic/common/uicr/gen_uicr/zephyr/: CMakeLists.txt
subsys/bluetooth/: CMakeLists.txt  Kconfig  Kconfig.adv  Kconfig.iso
subsys/bluetooth/audio/: Kconfig  Kconfig.baps  Kconfig.csip  Kconfig.vcs  ascs.c  bap_broadcast_assistant.c  bap_broadcast_sink.c  bap_scan_delegator.c  bap_stream.c  bap_unicast_client.c  broadcast_sink.c  broadcast_source.c  csip_set_coordinator.c  csip_set_member.c  endpoint.h  mcc.c  pacs.c  stream.c  unicast_client.c
subsys/bluetooth/audio/shell/: bap.c  bap_usb.c  csip_set_coordinator.c  csip_set_member.c
subsys/bluetooth/common/: CMakeLists.txt  Kconfig  assert.h  bt_settings_commit.h  bt_shell_private.h  bt_str.h  hci_common_internal.h  rpa.h
subsys/bluetooth/controller/: CMakeLists.txt  Kconfig  Kconfig.ll_sw_split
subsys/bluetooth/controller/hci/: hci.c  hci_driver.c  hci_internal.h
subsys/bluetooth/controller/include/: ll_feat.h
subsys/bluetooth/controller/ll_sw/: lll_adv.h  pdu.h  ull.c  ull_adv.c  ull_adv_aux.c  ull_conn.c  ull_filter.c  ull_scan_aux.c  ull_scan_types.h  ull_slave.c  ull_sync.c  ull_sync_internal.h
subsys/bluetooth/controller/ll_sw/nordic/hal/nrf5/: cpu.h  ecb.c
subsys/bluetooth/controller/ll_sw/nordic/hal/nrf5/radio/: radio.c  radio_nrf5.h  radio_nrf54hx.h
subsys/bluetooth/controller/ll_sw/nordic/lll/: lll.c  lll_clock.c  lll_scan_aux.c
subsys/bluetooth/controller/ll_sw/openisa/lll/: lll_adv.c
subsys/bluetooth/controller/util/: mayfly.c
subsys/bluetooth/crypto/: Kconfig  bt_crypto.h
subsys/bluetooth/host/: CMakeLists.txt  Kconfig  Kconfig.gatt  Kconfig.l2cap  addr_internal.h  adv.c  adv.h  att.c  att_internal.h  buf.c  buf_view.h  conn.c  conn_internal.h  crypto.c  crypto.h  cs.c  direction_internal.h  ecc.c  ecc.h  gatt.c  gatt_internal.h  hci_common.c  hci_core.c  hci_core.h  hci_ecc.c  hci_raw.c  hci_raw_internal.h  id.c  id.h  iso.c  iso_internal.h  keys.c  keys.h  l2cap.c  l2cap_internal.h  long_wq.h  monitor.h  rfcomm.c  scan.c  scan.h  (+3 more)
subsys/bluetooth/host/mesh/: CMakeLists.txt
subsys/bluetooth/host/shell/: bt.c  bt.h  cs.c
subsys/bluetooth/mesh/: CMakeLists.txt  Kconfig  access.c  access.h  adv.h  adv_ext.c  beacon.c  cfg_cli.c  cfg_srv.c  dfd_srv.c  friend.c  gatt_services.c  lpn.c  op_agg.c  pb_gatt_srv.c  prov.c  prov.h  prov_device.c  provisioner.c  proxy_srv.c  rpr_srv.c  transport.c
subsys/bluetooth/nordic-controller/: CMakeLists.txt  crypto.c  hci_driver.c
subsys/bluetooth/shell/: audio.c  bt.c  iso.c  l2cap.c
subsys/bootloader/: CMakeLists.txt  Kconfig  boot.c  bootloader.c  startup.c
tests/arch/arm/arm_irq_vector_table/: CMakeLists.txt
tests/arch/arm/arm_irq_vector_table/boards/: nrf54h20dk_nrf54h20_cpurad.conf
tests/arch/arm/arm_irq_vector_table/src/: arm_irq_vector_table.c
tests/drivers/comparator/gpio_loopback/: CMakeLists.txt  testcase.yaml
tests/kernel/common/: CMakeLists.txt  testcase.yaml
tests/subsys/ipc/ipc_sessions/remote/: CMakeLists.txt  Kconfig  prj.conf
tests/subsys/ipc/ipc_sessions/remote/boards/: nrf5340dk_nrf5340_cpunet.overlay  nrf54h20dk_nrf54h20_cpuppr.overlay  nrf54h20dk_nrf54h20_cpurad.overlay
tests/subsys/ipc/ipc_sessions/remote/src/: remote.c
(+2647 files in other folders)
